--- a/feed.html
+++ b/feed.html
@@ -75,26 +75,18 @@
     }
     .logo-dot { 
       color: #FF6B6B;
-      filter: drop-shadow(0 0 15px rgba(255, 107, 107, 0.8));
-      animation: pulse 2s ease-in-out infinite;
     }
     
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-    }
-
     /* Navigation */
     nav {
       position: sticky;
       top: 0;
       z-index: 100;
-      background: rgba(10, 14, 39, 0.8);
+      background: #0a0e27;
       padding: 16px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      backdrop-filter: blur(20px);
       border-bottom: 2px solid rgba(255, 107, 107, 0.2);
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
     }
@@ -114,13 +106,11 @@
     .nav-links a.active { 
       color: #FFFFFF;
       background: linear-gradient(135deg, rgba(255, 107, 107, 0.3) 0%, rgba(78, 205, 196, 0.3) 100%);
-      box-shadow: 0 0 20px rgba(255, 107, 107, 0.4);
     }
     
     .nav-links a:hover { 
       color: #FFFFFF;
       background: rgba(255, 107, 107, 0.2);
-      transform: translateY(-2px);
     }
 
     /* Logout button */
@@ -133,7 +123,6 @@
       align-items: center;
       gap: 8px;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(255, 107, 107, 0.5);
       border: none;
       color: white;
       cursor: pointer;
@@ -142,8 +131,6 @@
       letter-spacing: 0.05em;
     }
     .logout-btn:hover { 
-      transform: translateY(-2px) scale(1.05);
-      box-shadow: 0 6px 25px rgba(255, 107, 107, 0.7);
     }
 
     main {
@@ -162,13 +149,9 @@
       font-size: 72px;
       font-weight: 900;
       line-height: 1;
-      background: linear-gradient(135deg, #FFFFFF 0%, #FFE66D 40%, #FF6B6B 100%);
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
+      color: #FFFFFF;
       margin-bottom: 12px;
       text-align: center;
-      filter: drop-shadow(0 0 40px rgba(255, 230, 109, 0.4));
       text-transform: uppercase;
       letter-spacing: -0.02em;
     }
@@ -183,8 +166,7 @@
 
     /* Meme cards */
     .meme-card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
+      background: linear-gradient(135deg, #1a0b2e 0%, #0f0520 100%);
       color: #FFFFFF;
       border-radius: 20px;
       overflow: hidden;
@@ -296,7 +278,6 @@
       font-weight: 800;
       margin-top: 60px;
       transition: all 0.3s ease;
-      box-shadow: 0 8px 30px rgba(255, 107, 107, 0.4);
       border: none;
       color: #0a0e27;
       cursor: pointer;
@@ -307,7 +288,6 @@
 
     .load-more:hover {
       transform: translateY(-3px);
-      box-shadow: 0 12px 40px rgba(255, 230, 109, 0.6);
     }
 
     /* Pagination */
@@ -342,7 +322,6 @@
       background: linear-gradient(135deg, #FF6B6B 0%, #FF8E53 100%);
       border-color: #FF6B6B;
       color: #FFFFFF;
-      box-shadow: 0 4px 15px rgba(255, 107, 107, 0.4);
     }
 
     .prev-btn, .next-btn {
@@ -497,7 +476,6 @@
       right: 20px; 
       font-size: 32px; 
       background: rgba(255, 107, 107, 0.9);
-      backdrop-filter: blur(10px);
       border: 2px solid rgba(255, 255, 255, 0.3);
       cursor: pointer; 
       color: #fff;
@@ -557,7 +535,7 @@
         <a href="upload.html">Upload</a>
         <a href="profile.html">Profile</a>
       </div>
-      <button class="logout-btn" onclick="window.location.href='login.html'"><i class="fas fa-sign-out-alt"></i> Logout</button>
+      <button class="logout-btn" onclick="window.location.href='index.html'"><i class="fas fa-sign-out-alt"></i> Logout</button>
     </div>
   </nav>
 
