--- a/upload.html
+++ b/upload.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLIKSY Upload</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        * { box-sizing: border-box; margin:0; padding:0; font-family: 'Poppins', sans-serif; }
+        * { box-sizing: border-box; margin:0; padding:0; font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif; }
 
         body {
             background: linear-gradient(135deg, #0a0e27 0%, #1a0b2e 50%, #160b28 100%);
@@ -222,7 +219,7 @@
             font-weight: 500;
             transition: all 0.3s ease;
             resize: none;
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
         }
 
