--- a/sign_up.html
+++ b/sign_up.html
@@ -7,6 +7,7 @@
   <title>KLIKSY Sign Up</title>
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="auth.js"></script>
   <style>
     * {
       box-sizing: border-box;
