--- a/404.html
+++ b/404.html
@@ -1,139 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 | Kliksy</title>
-  <style>
-    *, *::before, *::after {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 | Kliksy</title>
+    <style>
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
-    body {
-      min-height: 100vh;
-      font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-      background: radial-gradient(circle at top, #12002b 0%, #05040c 55%, #010102 100%);
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
+        body {
+            min-height: 100vh;
+            font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+            background: radial-gradient(circle at top, #12002b 0%, #05040c 55%, #010102 100%);
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
 
-    .glow {
-      position: absolute;
-      width: 460px;
-      height: 460px;
-      background: radial-gradient(circle, rgba(255,107,107,0.35) 0%, rgba(255,107,107,0) 70%);
-      filter: blur(20px);
-      animation: float 12s ease-in-out infinite;
-    }
+        .glow {
+            position: absolute;
+            width: 460px;
+            height: 460px;
+            background: radial-gradient(circle, rgba(255, 107, 107, 0.35) 0%, rgba(255, 107, 107, 0) 70%);
+            filter: blur(20px);
+            animation: float 12s ease-in-out infinite;
+        }
 
-    .glow.alt {
-      background: radial-gradient(circle, rgba(78,205,196,0.3) 0%, rgba(78,205,196,0) 70%);
-      width: 360px;
-      height: 360px;
-      animation-duration: 16s;
-    }
+        .glow.alt {
+            background: radial-gradient(circle, rgba(78, 205, 196, 0.3) 0%, rgba(78, 205, 196, 0) 70%);
+            width: 360px;
+            height: 360px;
+            animation-duration: 16s;
+        }
 
-    @keyframes float {
-      0% { transform: translate(-35%, -20%) scale(0.9); }
-      50% { transform: translate(20%, 10%) scale(1.1); }
-      100% { transform: translate(-30%, -25%) scale(0.9); }
-    }
+        @keyframes float {
+            0% {
+                transform: translate(-35%, -20%) scale(0.9);
+            }
 
-    .card {
-      position: relative;
-      backdrop-filter: blur(12px);
-      background: rgba(14, 12, 30, 0.85);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      border-radius: 30px;
-      padding: 56px 64px;
-      text-align: center;
-      width: min(640px, 90vw);
-      box-shadow: 0 30px 80px rgba(0, 0, 0, 0.45);
-      z-index: 5;
-    }
+            50% {
+                transform: translate(20%, 10%) scale(1.1);
+            }
 
-    .logo {
-      font-size: 34px;
-      font-weight: 800;
-      letter-spacing: 0.2em;
-      color: #ffffff;
-      margin-bottom: 32px;
-    }
+            100% {
+                transform: translate(-30%, -25%) scale(0.9);
+            }
+        }
 
-    .headline {
-      font-size: clamp(54px, 10vw, 76px);
-      font-weight: 700;
-      color: #ffc400;
-      letter-spacing: 0.08em;
-      margin-bottom: 12px;
-    }
+        .card {
+            position: relative;
+            backdrop-filter: blur(12px);
+            background: rgba(14, 12, 30, 0.85);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            border-radius: 30px;
+            padding: 56px 64px;
+            text-align: center;
+            width: min(640px, 90vw);
+            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.45);
+            z-index: 5;
+        }
 
-    .subhead {
-      font-size: 18px;
-      color: rgba(255, 255, 255, 0.75);
-      margin-bottom: 32px;
-      line-height: 1.6;
-    }
+        .logo {
+            font-size: 34px;
+            font-weight: 800;
+            letter-spacing: 0.2em;
+            color: #ffffff;
+            margin-bottom: 32px;
+        }
 
-    .cta-row {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 16px;
-    }
+        .headline {
+            font-size: clamp(54px, 10vw, 76px);
+            font-weight: 700;
+            color: #ffc400;
+            letter-spacing: 0.08em;
+            margin-bottom: 12px;
+        }
 
-    .cta-row a {
-      text-decoration: none;
-      font-size: 16px;
-      font-weight: 700;
-      padding: 16px 34px;
-      border-radius: 999px;
-      transition: transform 0.2s ease, opacity 0.2s ease;
-    }
+        .subhead {
+            font-size: 18px;
+            color: rgba(255, 255, 255, 0.75);
+            margin-bottom: 32px;
+            line-height: 1.6;
+        }
 
-    .cta-row a.primary {
-      background: linear-gradient(135deg, #FF6B6B, #FFE66D);
-      color: #0e0c1e;
-      box-shadow: 0 15px 40px rgba(255, 107, 107, 0.4);
-    }
+        .cta-row {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 16px;
+        }
 
-    .cta-row a.secondary {
-      border: 1px solid rgba(255, 255, 255, 0.4);
-      color: rgba(255, 255, 255, 0.85);
-    }
+        .cta-row a {
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: 700;
+            padding: 16px 34px;
+            border-radius: 999px;
+            transition: transform 0.2s ease, opacity 0.2s ease;
+        }
 
-    .cta-row a:hover {
-      transform: translateY(-2px);
-      opacity: 0.9;
-    }
+        .cta-row a.primary {
+            background: linear-gradient(135deg, #FF6B6B, #FFE66D);
+            color: #0e0c1e;
+            box-shadow: 0 15px 40px rgba(255, 107, 107, 0.4);
+        }
 
-    .note {
-      margin-top: 40px;
-      font-size: 14px;
-      color: rgba(255, 255, 255, 0.5);
-      letter-spacing: 0.05em;
-    }
-  </style>
+        .cta-row a.secondary {
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            color: rgba(255, 255, 255, 0.85);
+        }
+
+        .cta-row a:hover {
+            transform: translateY(-2px);
+            opacity: 0.9;
+        }
+
+        .note {
+            margin-top: 40px;
+            font-size: 14px;
+            color: rgba(255, 255, 255, 0.5);
+            letter-spacing: 0.05em;
+        }
+    </style>
 </head>
-<body>
-  <div class="glow"></div>
-  <div class="glow alt"></div>
 
-  <main class="card">
-    <div class="logo">KLIKSY</div>
-    <div class="headline">404</div>
-    <p class="subhead">Looks like this meme portal doesn't exist. Double-check the URL or head back to safer ground.</p>
-    <div class="cta-row">
-      <a class="primary" href="index.html">Return to Login</a>
-      <a class="secondary" href="feed.html">Jump to Feed</a>
-    </div>
-    <div class="note">If you believe this is a mistake, ping the Kliksy crew.</div>
-  </main>
+<body>
+    <div class="glow"></div>
+    <div class="glow alt"></div>
+
+    <main class="card">
+        <div class="logo">KLIKSY</div>
+        <div class="headline">404</div>
+        <p class="subhead">Looks like this meme portal doesn't exist. Double-check the URL or head back to safer ground.
+        </p>
+        <div class="cta-row">
+            <a class="primary" href="index.html">Return to Login</a>
+            <a class="secondary" href="feed.html">Jump to Feed</a>
+        </div>
+        <div class="note">If you believe this is a mistake, ping the Kliksy crew.</div>
+    </main>
 
 </body>
+
 </html>
