--- a/profile.html
+++ b/profile.html
@@ -81,6 +81,110 @@
             max-width: 900px;
         }
 
+        main {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 40px 20px 120px;
+        }
+
+        .profile-header {
+            position: relative;
+            background: radial-gradient(circle at top left, rgba(255, 107, 107, 0.2), rgba(10, 14, 39, 0.9));
+            border: 2px solid rgba(255, 255, 255, 0.08);
+            border-radius: 32px;
+            padding: 40px;
+            margin-top: 48px;
+            margin-bottom: 40px;
+            box-shadow: 0 20px 60px rgba(5, 0, 15, 0.4);
+        }
+
+        .logout-btn {
+            position: absolute;
+            top: 28px;
+            right: 28px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            color: #FFFFFF;
+            padding: 10px 18px;
+            border-radius: 12px;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            cursor: pointer;
+            display: inline-flex;
+            gap: 8px;
+            align-items: center;
+            transition: all 0.3s ease;
+        }
+
+        .logout-btn:hover {
+            background: rgba(255, 107, 107, 0.25);
+            border-color: #FF6B6B;
+        }
+
+        .profile-avatar {
+            width: 120px;
+            height: 120px;
+            border-radius: 32px;
+            background: rgba(255, 255, 255, 0.08);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 48px;
+            font-weight: 800;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .profile-username {
+            font-size: 32px;
+            font-weight: 800;
+            text-transform: capitalize;
+            letter-spacing: 0.04em;
+            margin-bottom: 8px;
+        }
+
+        .profile-email {
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+
+        .stats-container {
+            display: flex;
+            gap: 24px;
+            margin: 24px 0;
+        }
+
+        .stat-item {
+            min-width: 120px;
+            padding: 16px 20px;
+            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.06);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            text-align: center;
+        }
+
+        .stat-number {
+            font-size: 32px;
+            font-weight: 800;
+            color: #FFFFFF;
+        }
+
+        .stat-label {
+            font-size: 12px;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        .member-since {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            font-weight: 600;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
         .status-message {
             text-align: center;
             margin: 16px auto 32px;
