--- a/profile.html
+++ b/profile.html
@@ -151,22 +151,22 @@
 
         .stats-container {
             display: flex;
-            gap: 24px;
-            margin-bottom: 24px;
+            gap: 16px;
+            margin-bottom: 20px;
             flex-wrap: wrap;
         }
 
         .stat-item {
-            min-width: 120px;
-            padding: 16px 20px;
-            border-radius: 20px;
-            background: rgba(255, 255, 255, 0.06);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            min-width: 96px;
+            padding: 12px 14px;
+            border-radius: 16px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.08);
             text-align: center;
         }
 
         .stat-number {
-            font-size: 32px;
+            font-size: 26px;
             font-weight: 900;
             background: linear-gradient(135deg, #FF6B6B 0%, #FFE66D 100%);
             -webkit-background-clip: text;
@@ -175,11 +175,11 @@
         }
 
         .stat-label {
-            font-size: 12px;
-            color: rgba(255, 255, 255, 0.6);
+            font-size: 11px;
+            color: rgba(255, 255, 255, 0.65);
             font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 0.05em;
+            letter-spacing: 0.04em;
         }
 
         .member-since {
@@ -331,6 +331,9 @@
             color: rgba(255, 255, 255, 0.9);
             margin-bottom: 8px;
             font-weight: 500;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .photo-timestamp {
@@ -344,17 +347,18 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 16px;
-            margin: 32px auto 48px;
+            gap: 12px;
+            margin: 48px auto 60px;
         }
 
         .pagination-btn {
-            background: rgba(255, 255, 255, 0.08);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            color: #FFFFFF;
-            padding: 10px 18px;
-            border-radius: 12px;
+            padding: 10px 14px;
+            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.7);
             font-weight: 700;
+            font-size: 14px;
             text-transform: uppercase;
             letter-spacing: 0.05em;
             cursor: pointer;
@@ -365,19 +369,22 @@
         }
 
         .pagination-btn:hover:not(:disabled) {
+            background: rgba(255, 107, 107, 0.2);
             border-color: #FF6B6B;
-            color: #FF6B6B;
+            color: #FFFFFF;
         }
 
         .pagination-btn:disabled {
-            opacity: 0.4;
+            opacity: 0.35;
             cursor: not-allowed;
+            border-color: rgba(255, 255, 255, 0.1);
         }
 
         .pagination-info {
-            font-weight: 700;
-            letter-spacing: 0.05em;
-            color: rgba(255, 255, 255, 0.7);
+            font-weight: 800;
+            letter-spacing: 0.06em;
+            color: rgba(255, 255, 255, 0.75);
+            text-transform: uppercase;
         }
 
         .empty-state {
